--- a/application_info/index.html
+++ b/application_info/index.html
@@ -555,8 +555,8 @@
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
+                <p class="clickIconCopy">vickyw.design@gmail.com
+</p>              </button>
             </div>
           </div>
           <div class="Grid-cell">
