--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1044,7 +1044,7 @@
           <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconL" src="./Icon_Mobile.svg" alt="Mobile">
+                <img class="iconMax" src="./Icon_Mobile.svg" alt="Mobile">
                 <div class="centerHorz">
                   <div class="chip">Mobile</div>
                 </div>
@@ -1052,7 +1052,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconL" src="./Icon_Tablet.svg" alt="Tablet">
+                <img class="iconMax" src="./Icon_Tablet.svg" alt="Tablet">
                 <div class="centerHorz">
                   <div class="chip">Tablet</div>
                 </div>
@@ -1061,7 +1061,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="iconL" src="./Icon_Laptop.svg" alt="Laptop">
+                <img class="iconMax" src="./Icon_Laptop.svg" alt="Laptop">
                 <div class="centerHorz">
                   <div class="chip">Laptop</div>
                 </div>
@@ -1308,47 +1308,47 @@
           <!-- Arrow -->
           <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
 
-            
+
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusXS"></div>
-                  <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
+                <div class="WarmBg spacing6 borderRadiusXS"></div>
+                <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusS"></div>
-                  <p><strong>S</strong> 8 px &#47; 0.5 em</p>
-                </div>
+                <div class="WarmBg spacing6 borderRadiusS"></div>
+                <p><strong>S</strong> 8 px &#47; 0.5 em</p>
+              </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusM"></div>
-                  <p><strong>M</strong> 12 px &#47; 0.75 em</p>
-                </div>
+                <div class="WarmBg spacing6 borderRadiusM"></div>
+                <p><strong>M</strong> 12 px &#47; 0.75 em</p>
+              </div>
             </div>
 
 
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusL"></div>
-                  <p><strong>L</strong> 16 px &#47; 1 em</p>
-                </div>
+                <div class="WarmBg spacing6 borderRadiusL"></div>
+                <p><strong>L</strong> 16 px &#47; 1 em</p>
+              </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusXL"></div>
-                  <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
-                </div>
+                <div class="WarmBg spacing6 borderRadiusXL"></div>
+                <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+              </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                  <div class="WarmBg spacing6 borderRadiusMax"></div>
-                  <p><strong>Max</strong> 50%</p>
-                </div>
+                <div class="WarmBg spacing6 borderRadiusMax"></div>
+                <p><strong>Max</strong> 50%</p>
+              </div>
             </div>
- 
- 
+
+
           </div>
           <div class="wrapper">
             <div class="element">
@@ -2161,6 +2161,7 @@
 
 
           </div>
+
           <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
@@ -2229,28 +2230,16 @@
                 </div>
               </div>
             </div>
+
             <div class="Grid-cell">
-              <div class="element">
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly" contenteditable="true">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/copy.svg" alt="CodePen">
-                    <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
-                  </button>
-                </div>
-              </div>
+              <div class="element"></div>
             </div>
             <div class="Grid-cell">
-              <div class="element">
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly" contenteditable="true">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/link.svg" alt="Link">
-                    <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
-                  </button>
-                </div>
-              </div>
+              <div class="element"></div>
             </div>
+
+
+
 
 
 
@@ -2326,10 +2315,26 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="element"></div>
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                      src="../icon/copy.svg" alt="CodePen">
+                    <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
+                  </button>
+                </div>
+              </div>
             </div>
             <div class="Grid-cell">
-              <div class="element"></div>
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                      src="../icon/link.svg" alt="Link">
+                    <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
+                  </button>
+                </div>
+              </div>
             </div>
 
           </div>
@@ -2477,7 +2482,13 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Profile.svg"
+                      alt="Arrow Forward">
+                    <p class="clickIconCopy">src="../icon/Profile.svg"</p>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="Grid-cell">
@@ -4061,8 +4072,8 @@
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
+                <p class="clickIconCopy">vickyw.design@gmail.com
+</p>              </button>
             </div>
           </div>
           <div class="Grid-cell">
