--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
 
@@ -568,8 +568,8 @@
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
                 <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-              </button>
+                <p class="clickIconCopy">vickyw.design@gmail.com
+</p>              </button>
             </div>
           </div>
           <div class="Grid-cell">
