--- a/application_info/index.html
+++ b/application_info/index.html
@@ -554,8 +554,7 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com
+                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">                <p class="clickIconCopy">vickyw.design@gmail.com
 </p>              </button>
             </div>
           </div>
