--- a/glorify/index.html
+++ b/glorify/index.html
@@ -3607,9 +3607,9 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange">&#160; Create a custom prayer for your group</strong>
-                </h4>
+                </h3>
 
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
@@ -3629,9 +3629,9 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange">&#160; Join an existing group prayer</strong>
-                </h4>
+                </h3>
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
@@ -4074,9 +4074,9 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange">&#160; Create a custom prayer for your group</strong>
-                </h4>
+                </h3>
 
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
@@ -4095,9 +4095,9 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange">&#160; Join an existing group prayer</strong>
-                </h4>
+                </h3>
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
@@ -4462,9 +4462,9 @@
           <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange">&#160; Create a custom prayer for your group</strong>
-                </h4>
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Create a group prayer</strong>
+                </h3>
 
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
@@ -4482,9 +4482,9 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange">&#160; Join an existing group prayer</strong>
-                </h4>
+                </h3>
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
@@ -4498,9 +4498,9 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange">&#160; Progress through the prayer session</strong>
-                </h4>
+                <h3 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Praying Progress</strong>
+                </h3>
                 <h5 class="centerVer">
                   Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
@@ -4897,8 +4897,8 @@
         <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
                 <p class="clickIconCopy">vickyw.design@gmail.com </p>
               </button>
             </div>
