copy-text button

--- a/application_info/index.html
+++ b/application_info/index.html
@@ -222,75 +222,13 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <h2 class="tArrow"> Useful links <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-          </h2>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
-    <div class="containerCopy element">
-      <div class="ClickandCopy">LinkedIn</div>
-      <div class="copy-text">
-        <input type="text" class="text" value="https://www.linkedin.com/in/vicky-wyq/" />
-        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
-        </button>
-      </div>
-    </div>
-
-    <div class="containerCopy element">
-      <div class="ClickandCopy">Website</div>
-
-      <div class="copy-text">
-        <input type="text" class="text" value="https://vickywang.me/" />
-
-        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
-        </button>
-      </div>
-    </div>
-    <div class="containerCopy element">
-      <div class="ClickandCopy">Password</div>
-
-      <div class="copy-text">
-        <input type="text" class="text" value="hazel-print-wrist"/>
-
-        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
-        </button>
-      </div>
-    </div>
-    <div class="containerCopy element">
-      <div class="ClickandCopy">Work Samples</div>
-
-      <div class="copy-text">
-        <input type="text" class="text" value="https://vickywang.me/worksamples/xiaobaobeeii/" />
-
-        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
-        </button>
-      </div>
-    </div>
-    <div class="containerCopy element">
-      <div class="ClickandCopy">Resume with work samples</div>
-
-      <div class="copy-text">
-        <input type="text" class="text" value="https://vickywang.me/resumeWS.pdf" />
-
-        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
-        </button>
-      </div>
-    </div>
-
-
-    <div class="blankHS"></div>
-    <!-- Arrow -->
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
           <h2 class="tArrow"> Social Network <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
           </h2>
         </div>
       </div>
     </div>
     <!-- Arrow -->
-    <div class="Grid Grid--gutters Grid--cols-12 u-textCenter Grid--center">
+    <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
 
 
       <div class="Grid-cell">
@@ -341,6 +279,48 @@
           </div>
         </div>
       </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly" contenteditable="true">
+              <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy Cover Letter to Clipboard"
+                src="../icon/Document.svg">
+              <div class="clickIconCopy">
+                <p> Dear Hiring Manager, </p>
+                <p>My name is Vicky, and I am a UX designer with experience designing both business-facing web
+                  applications and consumer-oriented mobile apps. I invite you to view some of my work on our B2B web
+                  app
+                  at [https://vickywang.me/worksamples/xiaobaobeeii/].</p>
+                <p>At BookYourPet, where I have been an integral team member for the past two years, our mission is to
+                  offer pet business owners an efficient tool for managing their operations. Our platform aims to
+                  streamline appointment management processes, with key features that include team member shift
+                  management, service availability tracking, and payment facilitation, among others. While several
+                  features were in place before I joined BYP, the iteration of the platform is continuously shaped by
+                  pre-existing elements and legacy factors. Collaborating closely with both the engineering and product
+                  manager, I am involved in every phase of the design process.</p>
+                <p>Prior to my tenure at BYP, I took on the challenge of designing, building, and maintaining my
+                  personal
+                  website [https://vickywang.me]. This was a comprehensive project, as I coded it from scratch using
+                  HTML/CSS/JS and hosted it on AWS. I also developed a responsive and scalable design system for the
+                  site[https://vickywang.me/design_system/].</p>
+                <p>My background further extends to architectural design. Before my transition into the UX realm, I was
+                  part of a competition-focused architectural design team, concentrating mainly on the initial stages of
+                  conceptual design.</p>
+                <p>What truly excites me in my profession is the opportunity to transform physical workflows into
+                  interactive digital interfaces. This entails converting the customer journey into structured digital
+                  screens – from information architecture to the final site map. I am passionate about dissecting
+                  requirements and crafting simple, scalable solutions that address user needs.</p>
+                <p>I eagerly anticipate the chance to discuss how my experience and skills align with your team's needs.
+                  Thank you for considering my application.</p>
+
+                <p>Best,</p>
+                <p>Vicky</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
       <div class="Grid-cell">
         <div class="element">
 
@@ -357,14 +337,74 @@
 
         </div>
       </div>
-      <div class="Grid-cell">
-        <div class="element">
 
-        </div>
-      </div>
+
 
     </div>
     <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Useful links <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="containerCopy element">
+      <div class="ClickandCopy">LinkedIn</div>
+      <div class="copy-text">
+        <input type="text" class="text" value="https://www.linkedin.com/in/vicky-wyq/" />
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Website</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Password</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="hazel-print-wrist" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Work Samples</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/worksamples/xiaobaobeeii/" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Resume with work samples</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/resumeWS.pdf" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+
+
+    <div class="blankHS"></div>
+
 
     <div class="Grid Grid--full">
       <div class="Grid-cell">
@@ -554,8 +594,10 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">                <p class="clickIconCopy">vickyw.design@gmail.com
-</p>              </button>
+                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
+                <p class="clickIconCopy">vickyw.design@gmail.com
+                </p>
+              </button>
             </div>
           </div>
           <div class="Grid-cell">
