copy-text button

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2213,8 +2213,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/iconFigma.svg" alt="LinkedIn">
-                    <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
+                      src="../icon/iconFigma.svg" alt="Figma">
+                    <p class="clickIconCopy">src="../icon/iconFigma.svg" alt="Figma"</p>
                   </button>
                 </div>
               </div>
@@ -2251,8 +2251,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/icon_clipboard-tick.svg" alt="Arrow Forward">
-                    <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
+                      src="../icon/icon_clipboard-tick.svg">
+                    <p class="clickIconCopy">src="../icon/icon_clipboard-tick.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2262,8 +2262,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/icon_Testing.svg" alt="Arrow Down">
-                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
+                      src="../icon/icon_Testing.svg">
+                    <p class="clickIconCopy">src="../icon/icon_Testing.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2274,7 +2274,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/Document.svg" alt="Arrow Back">
-                    <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                    <p class="clickIconCopy">src="../icon/Document.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2285,7 +2285,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/Receipt.svg" alt="Arrow Up">
-                    <p class="clickIconCopy">src="../icon/arrow-up.svg" alt="Arrow Up"</p>
+                    <p class="clickIconCopy">src="../icon/Receipt.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2296,7 +2296,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/icon_research.svg" alt="Arrow Down">
-                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
+                    <p class="clickIconCopy">src="../icon/icon_research.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2308,7 +2308,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/iconAlert.svg" alt="Arrow Back">
-                    <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                    <p class="clickIconCopy">src="../icon/iconAlert.svg"</p>
                   </button>
                 </div>
 
@@ -2320,7 +2320,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/copy.svg" alt="CodePen">
-                    <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
+                    <p class="clickIconCopy">src="../icon/copy.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2331,7 +2331,7 @@
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                       src="../icon/link.svg" alt="Link">
-                    <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
+                    <p class="clickIconCopy">src="../icon/link.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2346,8 +2346,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/icon_Final.svg" alt="Arrow Up">
-                    <p class="clickIconCopy">src="../icon/arrow-up.svg" alt="Arrow Up"</p>
+                      src="../icon/icon_Final.svg">
+                    <p class="clickIconCopy">src="../icon/icon_Final.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2357,8 +2357,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/note.svg" alt="Arrow Forward">
-                    <p class="clickIconCopy">src="../icon/arrow-forward.svg" alt="Arrow Forward"</p>
+                      src="../icon/note.svg">
+                    <p class="clickIconCopy">src="../icon/note.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2368,8 +2368,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/Category.svg" alt="Arrow Down">
-                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
+                      src="../icon/Category.svg">
+                    <p class="clickIconCopy">src="../icon/Category.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2379,8 +2379,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/layout.svg" alt="Arrow Down">
-                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
+                      src="../icon/layout.svg">
+                    <p class="clickIconCopy">src="../icon/layout.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2390,8 +2390,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/tag.svg" alt="Arrow Up">
-                    <p class="clickIconCopy">src="../icon/arrow-up.svg" alt="Arrow Up"</p>
+                      src="../icon/tag.svg">
+                    <p class="clickIconCopy">src="../icon/tag.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2401,8 +2401,8 @@
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
                     <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/icon_Iteration.svg" alt="Arrow Back">
-                    <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                      src="../icon/icon_Iteration.svg">
+                    <p class="clickIconCopy">src="../icon/icon_Iteration.svg"</p>
                   </button>
                 </div>
               </div>
@@ -2412,8 +2412,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconCalendar.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconCalendar.svg">
                     <p class="clickIconCopy">src="../icon/iconCalendar.svg"</p>
                   </button>
                 </div>
@@ -2423,8 +2422,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Redesign.svg"
-                      alt="Arrow Up">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_Redesign.svg">
                     <p class="clickIconCopy">src="../icon/icon_Redesign.svg"</p>
                   </button>
                 </div>
@@ -2440,8 +2438,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/library.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/library.svg">
                     <p class="clickIconCopy">src="../icon/library.svg"</p>
                   </button>
                 </div>
@@ -2451,8 +2448,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/components.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/components.svg">
                     <p class="clickIconCopy"> src="../icon/components.svg"</p>
                   </button>
                 </div>
@@ -2462,8 +2458,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_promotion.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/icon_promotion.svg">
                     <p class="clickIconCopy">src="../icon/icon_promotion.svg"</p>
                   </button>
                 </div>
@@ -2473,8 +2468,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/IconCompass.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/IconCompass.svg">
                     <p class="clickIconCopy">src="../icon/IconCompass.svg"</p>
                   </button>
                 </div>
@@ -2484,8 +2478,7 @@
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Profile.svg"
-                      alt="Arrow Forward">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Profile.svg">
                     <p class="clickIconCopy">src="../icon/Profile.svg"</p>
                   </button>
                 </div>
